--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
    <head>
      <title>COLMAR ACADEMY</title>
-      <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
-       <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-          <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
-           <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
-            <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta charset="utf-8">  
+     <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
   <body>
  
  <!--header-->
  <header>
    <div role="presentation" aria-label="School Logo"><img class="logo" alt="A Rampant Lion" src="resources/images/ic-logo.svg"><strong>COLMAR</strong>
-    <span style="color:black;">ACADEMY </span></div>
+     <span style="color:black;">ACADEMY </span></div>
  
  <!--nav menu-->
         <nav class="desktop"> 
@@ -38,9 +40,9 @@
  <div class="top-banner" role="presentation">
       <img src="resources/images/banner.jpg" alt="Three Students Studying Outside On A Wooden Table" title="Colmar Academy">
         <section>
-            <h1>Learn Something<br/>New Every Day</h1>
-            <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
-            <div class="button" role="button"><a href="Start-here">Start Here</a></div>
+          <h1>Learn Something<br/>New Every Day</h1>
+          <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
+          <div class="button" role="button"><a href="Start-here">Start Here</a></div>
         </section>
       </div> 
 
@@ -51,7 +53,7 @@
      <div class="top-section" role="presentation">
            <img src="resources/images/information-main.jpg" alt="A Man Reading A Book" title="Information">
              <h2>It Doesn't Hurt To Keep Practicing</h2>
-              <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
+               <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
                   nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam 
                   eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
                      <div role="complementary"><em>Emanuel, Sr Strategist at Hiring.com</em></div>
